css/default.css
/* ... */
.markdownBody p + ul,
.markdownBody p + ol {
    margin-top: 0.5em;
}

/*=-----------------------=*/
/*= Bulleted list markers =*/
/*=-----------------------=*/
/* NOTE: should be able to simplify list markers ~2026 using ::marker, see https://web.dev/css-marker-pseudo-element/ https://www.caniuse.com/css-marker-pseudo */
.markdownBody ul > li::before {
    position: absolute;
    z-index: 1;
    display: block;
    left: -1.375em;
    width: 0.75em;
    padding: 1px 0 0 0;
}

.markdownBody ul > li::before,
.markdownBody ul ul ul ul > li::before {
    content: url('/static/img/icon/single-black-star.svg');
    opacity: 0.72;

}
.markdownBody ul ul > li::before,
.markdownBody ul ul ul ul ul > li::before,
/* special /index override because the link compilation is not bolded */
body.index .section-link-list > li::before {
    content: url('/static/img/icon/single-white-star.svg');
    opacity: initial;
}
.markdownBody ul ul ul > li::before,
.markdownBody ul ul ul ul ul ul > li::before,
body.index .markdownBody .section-link-list ul > li::before {
    /* this rotates into more of a 'lozenge' square for variety's sake */
    content: url('/static/img/icon/single-white-star-rotated.svg');
    opacity: initial;
}

/*=-----------------------=*/
/*= Numbered list markers =*/
/*=-----------------------=*/

.markdownBody ol {
	counter-reset: list-item;
}

.markdownBody ol > li {
	counter-increment: list-item;
}

.markdownBody ol > li::before {
    position: absolute;
    z-index: 1;
    display: block;
    left: -2.5em;
    width: 2.125em;
	text-align: right;
}

.markdownBody ol > li::before,
.markdownBody ol ol ol ol > li::before {
	content: counter(list-item, decimal) ".";
}
.markdownBody ol ol > li::before,
.markdownBody ol ol ol ol ol > li::before {
	content: counter(list-item, upper-roman) ".";
}
.markdownBody ol ol ol > li::before,
.markdownBody ol ol ol ol ol ol > li::before {
	content: counter(list-item, lower-alpha) ".";
}

/*  Specific list type overrides.
    This assumes writing plain `<ol>` HTML lists instead of Arabic numerals like `<ol type="1">`.
    Pandoc Markdown defaults to the latter if you write '1./2.' etc, but an alternate syntax, '#.' is supported
    which yields a plain `<ol>` which can be more easily styled. (See https://pandoc.org/MANUAL.html#extension-startnum .)
    The specific motivating use-case is ordered lists inside footnotes: because footnotes are technically *already*
    inside a list (the list of footnotes), an ordered list in a footnote would show up as Roman numerals or Latin letters
    instead of the expected Arabic numerals (because of the alternating auto-styles above). Which is weird & unexpected!
*/
.markdownBody ol.list-type-decimal > li::before {
    content: counter(list-item, decimal) ".";
}
.markdownBody ol.list-type-lower-alpha > li::before {
    content: counter(list-item, lower-alpha) ".";
}
.markdownBody ol.list-type-upper-alpha > li::before {
    content: counter(list-item, upper-alpha) ".";
}
.markdownBody ol.list-type-lower-roman > li::before {
    content: counter(list-item, lower-roman) ".";
}
.markdownBody ol.list-type-upper-roman > li::before] {
    content: counter(list-item, upper-roman) ".";
}

/*=------------------=*/
/*= Weird edge cases =*/
/*=------------------=*/

.markdownBody li > ul + p,
.markdownBody li > ol + p {
    margin-top: 1em;
}

.markdownBody .aux-links-append .list-heading,
.markdownBody .list-heading.aux-links-list-label {
    margin-top: 0;
}

/***********/
/* FIGURES */
/***********/

figure {
    display: flow-root;
    margin: 2em auto 1.75em auto;
    max-width: calc(100% - 5em);
}
@media all and (max-width: 649px) {
    figure {
        max-width: calc(100% - 2em);
    }
}
figure + figure {
    margin-top: 2.75em;
}
@media all and (max-width: 649px) {
    figure + figure {
        margin-top: 2em;
    }
}

.figure-inner-wrapper {
    display: flex;
    flex-flow: column;
    margin: auto;
    width: fit-content;
    max-width: 100%;
}

figure img {
  background-color: var(--GW-body-background-color);
}

figure img,
figure video {
    outline: 1px solid var(--GW-figure-outline-color);
}
figure.outline-not img,
figure.outline-not video,
figure.outline-not audio {
    outline: none;
}
figure audio {
    display: block;
    margin: 0 auto;
    height: 54px;
    border-radius: 27px;
    position: relative;
    z-index: 1;
    top: 1px;
    box-sizing: border-box;
    border: 1px solid transparent;
}
/*  Special styles for special browsers.
	*/
@supports (-moz-user-focus: normal) {
	figure audio {
		height: 42px;
		border-radius: 21px;
	}
}
figure audio:hover {
    border-color: var(--GW-figure-outline-color);
    box-shadow:
        0 0 4px 0 var(--GW-figure-outline-color) inset,
        0 0 4px 0 var(--GW-figure-outline-color);
}

/*  Figure captions.
    */
figcaption {
    font-size: 0.9375em;
    font-weight: bold;
    line-height: 1.50;
    margin: auto;
    padding: 0.25em 0.5em calc(0.25em + 1px) 0.5em;
    width: fit-content;
    text-align: center;
}
figcaption strong {
    font-weight: inherit;
    font-variant-caps: small-caps;
}
@media all and (max-width: 649px) {
    figcaption {
        font-size: 0.875em;
    }
}

.caption-wrapper {
    display: block;
    outline: 1px solid var(--GW-figure-caption-outline-color);
    margin: 1px auto 0 auto;
    width: 100%;
}
figure.outline-not .caption-wrapper {
    outline: none;
}
video + .caption-wrapper {
    margin-top: 2px;
}

/*  Enable the various `![caption](/doc/foo/bar.jpg){.width-full}` uses;
    analogous to width-full tables
 */
figure.width-full {
    position: relative;
    max-width: unset;
}
/* ... */

